--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ tr:nth-child(even) {
 
 a {
     text-decoration: none;
-    color: #007BFF;
+    color: #0052aa;
     margin: 0 5px;
 }
 
@@ -58,7 +58,7 @@ label {
     font-weight: bold;
 }
 
-input[type="text"], textarea, input[type="file"] {
+input[type="text"], textarea, input[type="file"], input[type="password"] {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -74,7 +74,7 @@ textarea {
 button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: #0052aa;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -82,5 +82,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #0052aa;
 }
