--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ textarea {
 button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #0052aa;
+    background-color: #007BFF;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -82,5 +82,5 @@ button {
 }
 
 button:hover {
-    background-color: #0052aa;
+    background-color: #007BFF;
 }
